--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "nuxt": "^3.13.2",
-    "vue": "^3.5.14",
+    "nuxt": "^3.17.5",
+    "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.19.1",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.6.3",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.3",
+    "vue-tsc": "^2.1.10"
   }
 }
