--- a/.github/workflows/publishimage.yml
+++ b/.github/workflows/publishimage.yml
@@ -6,6 +6,10 @@ name: Build and Publish Container Image
 
 on: [workflow_call] # yamllint disable-line rule:truthy
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: wallet-verifier-test-web
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,7 +47,7 @@ jobs:
       - name: Authenticate with Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ vars.REGISTRY }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -51,20 +55,20 @@ jobs:
         id: metadata
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.REGISTRY }}/${{ github.repository_owner }}/${{ vars.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
           tags: |
             type=raw,value={{branch}},priority=1,enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
             type=semver,pattern={{version}},priority=2
-            type=raw,value=${{ vars.IMAGE_NAME }}-{{branch}}-{{date 'YYYYMMDD'}}-{{sha}},priority=31,enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
-            type=raw,value=${{ vars.IMAGE_NAME }}-{{tag}}-{{date 'YYYYMMDD'}}-{{sha}},priority=32,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=${{ env.IMAGE_NAME }}-{{branch}}-{{date 'YYYYMMDD'}}-{{sha}},priority=31,enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=${{ env.IMAGE_NAME }}-{{tag}}-{{date 'YYYYMMDD'}}-{{sha}},priority=32,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Build and Push Container Image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Dockerfile
+          file: ./docker/Dockerfile
           cache-from: type=gha
           cache-to: type=gha,mode=min
           platforms: linux/amd64
