--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "jose": "^6.0.11",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.19.1",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "happy-dom": "^17.6.3",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vitest": "^3.2.3",
     "vue-tsc": "^2.1.10"
