fix: allow custom verifier to run behind Digg proxy
In order for the custom verifier to work behind the proxy you must set
`NODE_OPTIONS` and `NODE_EXTRA_CA_CERTS` in your `.env` file before
running the build. The proxy certificate must also be placed in
`./docker/proxy-cert.crt`.

	cp /path/to/my-proxy-cert.crt ./docker/proxy-cert.crt
	cp /docker/.env.proxy ./docker/.env # Also modify the file
	./docker/scripts/wallet-ecosystem-http.sh

See: ./docker/.env.proxy
Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,6 +5,10 @@
 NODE_TLS_REJECT_UNAUTHORIZED=
 NPM_STRICT_SSL=
 
+# No customization of certificates
+NODE_OPTIONS=
+NODE_EXTRA_CA_CERTS=
+
 # Proxy settings (leave empty for no proxy)
 HTTP_PROXY=
 HTTPS_PROXY=
