--- a/docker/.env.proxy
+++ b/docker/.env.proxy
@@ -5,6 +5,10 @@
 NODE_TLS_REJECT_UNAUTHORIZED=0
 NPM_STRICT_SSL=false
 
+# Custom proxy certificate
+NODE_OPTIONS=--use-openssl-ca
+NODE_EXTRA_CA_CERTS=proxy-cert.crt
+
 # Proxy settings (update with your proxy details)
 # Format: http://username:password@proxy-host:port
 # Or without auth: http://proxy-host:port
