--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -62,6 +62,12 @@ services:
   # Our custom Nuxt verifier
   custom-verifier:
     build:
+      args:
+        - HTTP_PROXY=${HTTP_PROXY}
+        - HTTPS_PROXY=${HTTPS_PROXY}
+        - NO_PROXY=${NO_PROXY}
+        - NODE_OPTIONS=${NODE_OPTIONS}
+        - NODE_EXTRA_CA_CERTS=${NODE_EXTRA_CA_CERTS}
       context: ../
       dockerfile: Dockerfile
     container_name: custom-verifier
