fix: run wallet enterprise verifier on non-conflicting port
Port 8005 is used by some other service on the Digg computers, so we
want to use a different port to avoid conflicts. Specifically this
avoids startup issues and allows the container to start.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/config/wallet-ecosystem/docker-compose.override.yml
+++ b/docker/config/wallet-ecosystem/docker-compose.override.yml
@@ -16,6 +16,9 @@ services:
         - HTTPS_PROXY=${HTTPS_PROXY}
         - NPM_STRICT_SSL=${NPM_STRICT_SSL:-true}
         - NODE_TLS_REJECT_UNAUTHORIZED=${NODE_TLS_REJECT_UNAUTHORIZED:-1}
+    ports: !override
+      - 8105:8005
+      - 9260:9259
 
   wallet-backend-server:
     build:
