fix: exclude EUDI verifier proxy cert from version control
The certificate must be placed at this specific location in order to be
detected by the `import-cert.sh` script:

  config/eudi-verifier/proxy-cert.crt

In order to not accidentally leak these secrets we exclude the path from
version control.

See: ./docker/README.md
Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ docker/eudi-srv-web-verifier-endpoint-23220-4-kt
 
 # Proxy certificate
 docker/proxy-cert.crt
-
+docker/config/eudi-verifier/proxy-cert.crt
