fix: exclusively use Nexus or direct access for walt.id dependencies
This fixes the resolution of the bouncy castle dependency when running
behind the Digg proxy.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/config/eudi-verifier/init.gradle
+++ b/docker/config/eudi-verifier/init.gradle
@@ -61,12 +61,13 @@ allprojects {
                 url nexusWaltId
                 allowInsecureProtocol = true
             }
-        }
-        // Fallback to direct walt.id if not proxied through Nexus
-        maven {
-            url "https://maven.waltid.dev/releases"
-            mavenContent {
-                releasesOnly()
+        } else {
+            // Fallback to direct walt.id if not proxied through Nexus
+            maven {
+                url "https://maven.waltid.dev/releases"
+                mavenContent {
+                    releasesOnly()
+                }
             }
         }
     }
