fix: add Nexus variables to example proxy configuration
These variables are necessary to resolve dependencies for the EUID
verifier Gradle build when running behind the Digg proxy.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/.env.proxy
+++ b/docker/.env.proxy
@@ -11,3 +11,11 @@ NPM_STRICT_SSL=false
 HTTP_PROXY=http://your-proxy:8080
 HTTPS_PROXY=http://your-proxy:8080
 NO_PROXY=localhost,127.0.0.1,wallet-*,eudi-*
+
+# Corporate Nexus repository URLs
+NEXUS_BASE_URL=https://your-nexus-server/repository
+NEXUS_MAVEN_CENTRAL=${NEXUS_BASE_URL}/maven-central/
+NEXUS_MAVEN_PUBLIC=${NEXUS_BASE_URL}/maven-public/
+NEXUS_WALTID=${NEXUS_BASE_URL}/waltid.dev-release
+NEXUS_GRADLE=${NEXUS_BASE_URL}/gradle/
+NEXUS_GRADLE_PLUGINS=${NEXUS_BASE_URL}/gradle-plugins/
