--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,2 +1,9 @@
 [[allowlists]]
 paths = ["docker/haproxy.pem"]
+
+[[rules]]
+id = "digg-internal-hosts"
+description = "Digg internal host names"
+regex = '''([a-zA-Z0-9]+\.)*digg\.se'''
+keywords = ["digg"]
+tags = ["DIGG"]
