feat: allow mention of ospo@digg.se
Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -7,3 +7,7 @@ description = "Digg internal host names"
 regex = '''([a-zA-Z0-9]+\.)*digg\.se'''
 keywords = ["digg"]
 tags = ["DIGG"]
+
+[[rules.allowlists]]
+regexTarget = "line"
+regexes = ['''ospo\@digg\.se''']
