--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,13 +1,14 @@
 [[allowlists]]
 paths = ["docker/haproxy.pem"]
 
+[allowlist]
+description = "Global allow list"
+regexTarget = "line"
+regexes = ['''ospo\@digg\.se''']
+
 [[rules]]
 id = "digg-internal-hosts"
 description = "Digg internal host names"
 regex = '''([a-zA-Z0-9]+\.)*digg\.se'''
 keywords = ["digg"]
 tags = ["DIGG"]
-
-[[rules.allowlists]]
-regexTarget = "line"
-regexes = ['''ospo\@digg\.se''']
