--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -9,3 +9,6 @@ description = "Digg internal host names"
 regex = '''([a-zA-Z0-9]+\.)*digg\.se'''
 keywords = ["digg"]
 tags = ["DIGG"]
+
+[rules.allowlist]
+paths = ["docker/WSL.se.adoc"]
