test: add Gitleaks test file
This file can be used to test the Gitleaks rules. Just comment the
`.gitleaks-test.txt` path from the global allow list and run the linter
to try the rules.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -5,6 +5,9 @@ regexes = [
     '''^digg\.se$''',
     '''^ospo\@digg\.se$'''
 ]
+paths = [
+    ".gitleaks-test.txt"
+]
 
 [[rules]]
 id = "digg-internal-hosts"
