--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,7 +1,10 @@
 [allowlist]
 description = "Global allow list"
-regexTarget = "line"
-regexes = ['''ospo\@digg\.se''']
+regexTarget = "match"
+regexes = [
+    '''^digg\.se$''',
+    '''^ospo\@digg\.se$'''
+]
 
 [[rules]]
 id = "digg-internal-hosts"
@@ -12,3 +15,10 @@ tags = ["DIGG"]
 
 [rules.allowlist]
 paths = ["docker/WSL.se.adoc"]
+
+[[rules]]
+id = "digg-email-address"
+description = "Digg email address"
+regex = '''([a-zA-Z0-9]+)\@([a-zA-Z0-9]+\.)*digg\.se'''
+keywords = ["digg"]
+tags = ["DIGG"]
