--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -22,6 +22,6 @@ paths = ["docker/WSL.se.adoc"]
 [[rules]]
 id = "digg-email-address"
 description = "Digg email address"
-regex = '''([[:word:]\-]+)\@([[:word:]\-]+\.)*digg\.se'''
+regex = '''([[:word:]\-\.]+)\@([[:word:]\-]+\.)*digg\.se'''
 keywords = ["digg"]
 tags = ["DIGG"]
