chore: add renovate
Signed-off-by: Jesper Hellberg <extern.jesper.hellberg@digg.se>

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,8 @@
     ":semanticCommitTypeAll(chore)",
     "npm:unpublishSafe",
     ":rebaseStalePrs",
-    "mergeConfidence:all-badges"
+    "mergeConfidence:all-badges",
+    ":configMigration"
   ],
   "commitMessageLowerCase": "auto",
   "minimumReleaseAge": "4 days",
