fix: move Dockerfile to standard location
The Dockerfile needs to be in this specific location in order to be
found by the Digg build pipeline.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -69,7 +69,7 @@ services:
         - NODE_OPTIONS=${NODE_OPTIONS}
         - NODE_EXTRA_CA_CERTS=${NODE_EXTRA_CA_CERTS}
       context: ../
-      dockerfile: Dockerfile
+      dockerfile: src/main/docker/Dockerfile.build
     container_name: custom-verifier
     hostname: custom-verifier
     ports:
