fix: update renovate (#33)
Add auto update for minor
Remove redundant config

Signed-off-by: Jesper Hellberg <extern.jesper.hellberg@digg.se>

--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
     "security:openssf-scorecard",
     ":gitSignOff",
     ":maintainLockFilesWeekly",
-    ":automergePatch",
+    ":automergeMinor",
     ":semanticCommits",
     ":semanticCommitTypeAll(chore)",
     "npm:unpublishSafe",
@@ -26,7 +26,6 @@
     {
       "matchManagers": ["github-actions"],
       "addLabels": ["actions"],
-      "pinDigests": true,
       "groupName": "github actions"
     },
     {
