--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -21,7 +21,7 @@ jobs:
           egress-policy: audit
 
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5.0.0 #v5.0.0
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }} # https://github.com/actions/checkout/issues/426
