--- a/.github/workflows/publishimage.yml
+++ b/.github/workflows/publishimage.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4 #v4.4.0
         with:
           node-version: 20
 
@@ -34,7 +34,7 @@ jobs:
         run: npm run generate
 
       - name: Configure QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@v3 #v3.6.0
 
       - name: Configure Docker Buildx
         id: buildx
@@ -45,7 +45,7 @@ jobs:
           echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
 
       - name: Authenticate with Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3 #v3.5.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -53,7 +53,7 @@ jobs:
 
       - name: Extract Image Metadata
         id: metadata
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@v5 #v5.8.0
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           flavor: |
@@ -65,7 +65,7 @@ jobs:
             type=raw,value=${{ env.IMAGE_NAME }}-{{tag}}-{{date 'YYYYMMDD'}}-{{sha}},priority=32,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Build and Push Container Image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v6 #v6.18.0
         with:
           context: .
           file: ./docker/Dockerfile
