--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,65 +1,47 @@
 name: eudi-verifier-integration
 
 services:
-  # === EUDI Verifier ===
   eudi-verifier-backend:
-    build:
-      context: ./eudi-srv-web-verifier-endpoint-23220-4-kt
-      dockerfile: Dockerfile.custom
-      args:
-        - HTTP_PROXY=${HTTP_PROXY}
-        - HTTPS_PROXY=${HTTPS_PROXY}
-        - NO_PROXY=${NO_PROXY}
-        - NODE_TLS_REJECT_UNAUTHORIZED=${NODE_TLS_REJECT_UNAUTHORIZED:-1}
-        - NEXUS_MAVEN_CENTRAL=${NEXUS_MAVEN_CENTRAL}
-        - NEXUS_MAVEN_PUBLIC=${NEXUS_MAVEN_PUBLIC}
-        - NEXUS_WALTID=${NEXUS_WALTID}
-        - NEXUS_GRADLE=${NEXUS_GRADLE}
-        - NEXUS_GRADLE_PLUGINS=${NEXUS_GRADLE_PLUGINS}
+    image: ghcr.io/eu-digital-identity-wallet/eudi-srv-web-verifier-endpoint-23220-4-kt:latest
     container_name: eudi-verifier-backend
     hostname: eudi-verifier-backend
     ports:
       - "8080:8080"
+    volumes:
+      - ./keystore-p256.jks:/app/keystore-p256.jks:ro
     environment:
-      VERIFIER_PUBLICURL: "http://eudi-verifier-backend:8080"
+      VERIFIER_PUBLICURL: "${VERIFIER_PUBLICURL:-http://verifier:8080}"
       VERIFIER_RESPONSE_MODE: "DirectPostJwt"
-      SPRING_PROFILES_ACTIVE: "dev"
-      # Use x509_san_dns to include x5c headers
-      VERIFIER_ORIGINALCLIENTID: "localhost"
+      VERIFIER_ORIGINALCLIENTID: "${VERIFIER_ORIGINALCLIENTID:-verifier}" # localhost
       VERIFIER_CLIENTIDPREFIX: "x509_san_dns"
-      VERIFIER_JAR_SIGNING_ALGORITHM: "ES512"
+      VERIFIER_JAR_SIGNING_ALGORITHM: "ES256"
       VERIFIER_JAR_SIGNING_KEY: "LoadFromKeystore"
-      VERIFIER_JAR_SIGNING_KEY_KEYSTORE: "classpath:keystore.jks"
+      VERIFIER_JAR_SIGNING_KEY_KEYSTORE: "file:/app/keystore-p256.jks"
       VERIFIER_JAR_SIGNING_KEY_KEYSTORE_TYPE: "jks"
       VERIFIER_JAR_SIGNING_KEY_KEYSTORE_PASSWORD: "keystore"
       VERIFIER_JAR_SIGNING_KEY_ALIAS: "verifier"
-      VERIFIER_JAR_SIGNING_KEY_PASSWORD: "verifier"
-      # No trust sources configured - will use X5CShouldBe.Ignored mode
+      VERIFIER_JAR_SIGNING_KEY_PASSWORD: "keystore"
       VERIFIER_VALIDATION_SDJWTVC_STATUSCHECK_ENABLED: "false"
-      # Additional settings for debugging
       LOGGING_LEVEL_EU_EUROPA_EC_EUDI_VERIFIER_ENDPOINT: "DEBUG"
     restart: on-failure
     networks:
-      - wallet-ecosystem_default
       - default
 
-  #  eudi-verifier-ui:
-  #    image: ghcr.io/eu-digital-identity-wallet/eudi-web-verifier:latest
-  #    container_name: eudi-verifier-ui
-  #    hostname: eudi-verifier-ui
-  #    ports:
-  #      - "4300:4300"
-  #    environment:
-  #      DOMAIN_NAME: ""
-  #      HOST_API: "http://eudi-verifier"
-  #    depends_on:
-  #      - eudi-verifier-backend
-  #    restart: on-failure
-  #    networks:
-  #      - wallet-ecosystem_default
-  #      - default
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    hostname: nginx-proxy
+    ports:
+      - "8000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - eudi-verifier-backend
+      - custom-verifier
+    restart: on-failure
+    networks:
+      - default
 
-  # Our custom Nuxt verifier
   custom-verifier:
     build:
       args:
@@ -75,21 +57,18 @@ services:
     ports:
       - "3002:3002"
     environment:
-      HOST_API: "http://eudi-verifier-backend:8080"
+      HOST_API: "${NGROK_URL:-http://localhost:8000}/backend"
       PORT: "3002"
       NITRO_PORT: "3002"
-      NUXT_PUBLIC_BASE_URL: "http://localhost:3002"
-      PUBLIC_BASE_URL: "http://localhost:3002"
+      NUXT_PUBLIC_BASE_URL: "${NGROK_URL:-http://localhost:8000}"
+      PUBLIC_BASE_URL: "${NGROK_URL:-http://localhost:8000}"
+      WALLET_URL: "eudi-openid4vp://"
     depends_on:
       - eudi-verifier-backend
     restart: on-failure
     networks:
-      - wallet-ecosystem_default
       - default
 
 networks:
-  # Connect to wallet-ecosystem network
-  wallet-ecosystem_default:
-    external: true
   default:
     driver: bridge
