fix: npm and test (#59)
* fix: add missing mock and replace spy

Add missing mock to get rid of warnings in the build
Replace spy with stub to avoid warning in IDE

Signed-off-by: Jesper Hellberg <extern.jesper.hellberg@digg.se>

* fix: fail build on peer dependency conflict

- Add strict-peer-deps to github actions and to local builds to fail build
on warnings.
- Updata npm

Signed-off-by: Jesper Hellberg <extern.jesper.hellberg@digg.se>

---------

Signed-off-by: Jesper Hellberg <extern.jesper.hellberg@digg.se>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --strict-peer-deps
 
       - name: Run tests
         run: npm run test
