feat: configure stricter linting
This change set configures MegaLinter to be more strict. Specifically,
with the updated configuration we will fail the build in any of the
following situations:

 1. When there are any formatting issues detected
 2. When there are any automatic fixes suggested by any of the linters

Without these changes, formatting issues and automatic fixes are
detected and the source files are updated. However, the updates are not
committed - and worse, the issues are not even reported.

See: https://megalinter.io/latest/config-variables/
Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/development/megalinter.yml
+++ b/development/megalinter.yml
@@ -11,6 +11,8 @@ PRINT_ALPACA: false
 APPLY_FIXES: all
 
 DISABLE_ERRORS: false
+FAIL_IF_UPDATED_SOURCES: true
+FORMATTERS_DISABLE_ERRORS: false
 SHOW_ELAPSED_TIME: true
 SHOW_SKIPPED_LINTERS: false
 
