--- a/development/megalinter.yml
+++ b/development/megalinter.yml
@@ -47,6 +47,7 @@ ENABLE_LINTERS:
   ]
 
 # Specific linter options
+MARKDOWN_MARKDOWNLINT_FILTER_REGEX_EXCLUDE: ^CHANGELOG.md$
 TYPESCRIPT_DEFAULT_STYLE: prettier
 TYPESCRIPT_PRETTIER_CONFIG_FILE: .prettierc
 BASH_SHFMT_ARGUMENTS: -i 2
