--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "jimp": "^1.6.0",
     "jose": "^6.0.11",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
+    "qrcode-reader": "^1.0.4",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@tailwindcss/forms": "0.5.10",
     "@vue/test-utils": "2.4.6",
     "autoprefixer": "10.4.21",
+    "nuxt-qrcode": "^0.4.6",
     "happy-dom": "17.6.3",
     "postcss": "8.5.6",
     "tailwindcss": "4.1.12",
